--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ flutter:
   assets:
     - assets/balony.jpg
     - assets/HOlogo.png
+    - assets/HOlogoWHITE.png
+    - assets/marble.jpg
   #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
